...
            android:hint="@string/et_barcode"
            android:background="@drawable/bg_edittext"
            android:id="@+id/etBarcode"
            android:inputType="number"
            android:maxLines="1"
...

        <com.tiper.MaterialSpinner
            android:id="@+id/spCategory"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
...
        <Button
            android:layout_marginTop="60sp"
            android:id="@+id/btnStep1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutStep2"
    android:visibility="gone">
    <LinearLayout
...
    <Button

        android:id ="@+id/btnUploadIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
    <EditText
        android:layout_marginTop="20sp"
        android:id="@+id/etResultIngredients"
        android:autoLink="all"
        android:inputType="textCapSentences|textMultiLine"
...
        android:layout_marginTop="15sp"
        android:layout_margin="16sp"
        android:id="@+id/btnStep2"
        android:text ="@string/btn_continue"
        android:textColor="@color/colorPrimary"
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutStep3"
        android:padding="2sp"
        android:layout_margin="16sp"
...
        android:hint="@string/et_brand"
        android:background="@drawable/bg_edittext"
        android:id="@+id/etBrand"
        android:textSize="18sp"
        android:layout_marginTop="5sp"
...
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etName"
        android:textSize="18sp"
        android:layout_marginTop="10sp"
...
    <com.tiper.MaterialSpinner
        android:layout_marginTop="20sp"
        android:id="@+id/spType"
        android:hint="@string/tv_type"
        app:spinnerMode="dialog"
...
    <Button
        android:layout_marginTop="60sp"
        android:id="@+id/btnStep3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
...

    <ScrollView
        android:id="@+id/layoutStep4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                <RadioButton
                    android:id="@+id/rdoYesVeganSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/rdoNoVeganSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbDunnes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbTesco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbSupervalu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbLidl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbAldi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbHB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbIceland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/cbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSpecify"
                android:background="@drawable/bg_edittext"
                android:hint="@string/specify"
...
                android:layout_marginTop="15sp"
                android:padding="10sp"
                android:id="@+id/btnStep4"/>
        </LinearLayout>
    </ScrollView>
...
